<?xml version="1.0"?>
<package>
  <name>teleop_wii</name>
  <version>0.0.1</version>
  <description>
    teleop. wiimote.
  </description>
  <maintainer email="mnt@codeninja.de">mnt</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
